--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -13,8 +13,8 @@
                         <li class="orders__item">
                             <h1>Order - # <%= order._id %></h1>
                             <ul class="orders__products">
-                                <% order.items.forEach(product => { %>
-                                    <li class="orders__products-item"><%= product.title %> (<%= product.quantity %>)</li>
+                                <% order.products.forEach(pr => { %>
+                                    <li class="orders__products-item"><%= pr.product.title %> (<%= pr.quantity %>)</li>
                                 <% }); %>
                             </ul>
                         </li>
